--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -9,8 +9,10 @@ framework:
         handler_id: null
         cookie_secure: auto
         cookie_samesite: lax
-
+    
     #esi: true
     #fragments: true
     php_errors:
         log: true
+    
+    serializer: { enable_annotations: true }
