--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -1,4 +1,12 @@
 api_platform:
+    title: BilemoAPI's documentation
+    description: 'API description'
+    version: '1.0.0'
+    show_webby: false
+    enable_docs: true
+    enable_re_doc: true
+    http_cache:
+        etag: true
     mapping:
         paths: ['%kernel.project_dir%/src/Entity']
     patch_formats:
